Add gender of dinosaur
Co-authored-by: Eric Endsley <eric.endsley4@gmail.com>
Co-authored-by: Cory Nordenbrock <cordenbrock@gmail.com>

--- a/Shelter/Views/Animals/Details.cshtml
+++ b/Shelter/Views/Animals/Details.cshtml
@@ -8,4 +8,5 @@
 <h2>Dino Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Type): @Html.DisplayFor(model => model.Type)</h3>
-<h3>Date of admittance: @Html.DisplayFor(model => model.DateOfAdmittance)</h3>
+<h4>Date of admittance: @Html.DisplayFor(model => model.DateOfAdmittance)</h3>
+  <p>@Html.DisplayFor(model => model.Gender) @Html.DisplayFor(model => model.Breed)</p>
