Add dynamic nav bar
Co-authored-by: Eric Endsley <eric.endsley4@gmail.com>
Co-authored-by: Cory Nordenbrock <cordenbrock@gmail.com>

--- a/Shelter/Views/Shared/_Layout.cshtml
+++ b/Shelter/Views/Shared/_Layout.cshtml
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-  @RenderBody()
+  <div class="container">
+    <p><a href='/'>Home</a></p>
+    <p><a href='/animals'>View all Dinosaurs</a></p>
+    @RenderBody()
+  </div>
 </body>
 
 </html>
