Add functionality to order by animal.Type
Co-authored-by: Eric Endsley <eric.endsley4@gmail.com>
Co-authored-by: Cory Nordenbrock <cordenbrock@gmail.com>

--- a/Shelter/Views/Shared/_Layout.cshtml
+++ b/Shelter/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <p><a href='/'>Home</a></p>
-    <p><a href='/animals'>View all Dinosaurs</a></p>
+    <p><a href='/Animals'>View all Dinosaurs</a></p>
     @RenderBody()
   </div>
 </body>
