--- a/Shelter/Views/Animals/Details.cshtml
+++ b/Shelter/Views/Animals/Details.cshtml
@@ -10,3 +10,6 @@
 <h3>@Html.DisplayNameFor(model => model.Type): @Html.DisplayFor(model => model.Type)</h3>
 <h4>Date of admittance: @Html.DisplayFor(model => model.DateOfAdmittance)</h3>
   <p>@Html.DisplayFor(model => model.Gender) @Html.DisplayFor(model => model.Breed)</p>
+
+
+  <p><a href='/Animals'>Go back</a></p>
